--- a/textproc/highlight/Makefile
+++ b/textproc/highlight/Makefile
@@ -1,6 +1,5 @@
-# $NetBSD: Makefile,v 1.55 2024/11/14 22:21:50 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2025/01/08 18:10:54 schmonz Exp $
 
-PKGREVISION= 3
 .include "../../textproc/libhighlight/Makefile.common"
 
 MANCOMPRESSED=		yes
