--- a/devel/py-logbook/Makefile
+++ b/devel/py-logbook/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/11/11 07:28:15 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/08 20:35:32 adam Exp $
 
-DISTNAME=	Logbook-1.7.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
+DISTNAME=	logbook-1.8.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=L/Logbook/}
 
@@ -10,16 +10,12 @@ HOMEPAGE=	https://logbook.readthedocs.io/
 COMMENT=	Logging replacement for Python
 LICENSE=	modified-bsd
 
-DEPENDS+=	${PYPKGPREFIX}-brotli-[0-9]*:../../archivers/py-brotli
+WHEEL_NAME=	${DISTNAME:S/l/L/}
+
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
+# compression
+DEPENDS+=	${PYPKGPREFIX}-brotli-[0-9]*:../../archivers/py-brotli
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-# needs 'make install'
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} pytest-${PYVERSSUFFIX}
 
 .include "../../devel/py-cython/buildlink3.mk"
 .include "../../lang/python/wheel.mk"
