--- a/devel/py-inline-snapshot/Makefile
+++ b/devel/py-inline-snapshot/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1 2024/11/11 09:00:47 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/09 10:32:25 adam Exp $
 
-DISTNAME=	inline_snapshot-0.14.0
+DISTNAME=	inline_snapshot-0.18.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
-CATEGORIES=	devel
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/inline_snapshot/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -17,13 +17,15 @@ DEPENDS+=	${PYPKGPREFIX}-click>=8.1.4:../../devel/py-click
 DEPENDS+=	${PYPKGPREFIX}-executing>=2.1.0:../../lang/py-executing
 DEPENDS+=	${PYPKGPREFIX}-rich>=13.7.1:../../comms/py-rich
 DEPENDS+=	${PYPKGPREFIX}-typing-extensions-[0-9]*:../../devel/py-typing-extensions
+TEST_DEPENDS+=	${PYPKGPREFIX}-attrs>=24.3.0:../../devel/py-attrs
 TEST_DEPENDS+=	${PYPKGPREFIX}-dirty-equals>=0.7.0:../../devel/py-dirty-equals
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=6.75.5:../../devel/py-hypothesis
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-freezer>=0.4.8:../../devel/py-test-freezer
 TEST_DEPENDS+=	${PYPKGPREFIX}-mypy>=1.2.0:../../lang/py-mypy
-TEST_DEPENDS+=	${PYPKGPREFIX}-pydantic-[0-9]*:../../devel/py-pydantic
+TEST_DEPENDS+=	${PYPKGPREFIX}-pydantic>=1:../../devel/py-pydantic
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-freezer>=0.4.8:../../devel/py-test-freezer
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-mock>=3.14.0:../../devel/py-test-mock
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-subtests>=0.11.0:../../devel/py-test-subtests
-# als needs unpackaged:
+# tests also need unpackaged:
 #  "pyright>=1.1.359",
 
 # as of 0.14.0
