--- a/devel/shfmt/Makefile
+++ b/devel/shfmt/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.21 2024/09/06 18:48:47 bsiegert Exp $
+# $NetBSD: Makefile,v 1.22 2025/01/09 13:27:57 adam Exp $
 
-DISTNAME=	shfmt-3.7.0
-PKGREVISION=	14
+DISTNAME=	shfmt-3.10.0
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mvdan/}
 GITHUB_PROJECT=	sh
