--- a/converters/hs-pandoc-server/Makefile
+++ b/converters/hs-pandoc-server/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:31:41 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/09 23:15:14 wiz Exp $
 
 DISTNAME=	pandoc-server-0.1.0.5
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	converters
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
