--- a/finance/hledger-lib/Makefile
+++ b/finance/hledger-lib/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2024/05/09 01:32:21 pho Exp $
+# $NetBSD: Makefile,v 1.19 2025/01/09 23:15:14 wiz Exp $
 
 DISTNAME=	hledger-lib-1.33.1
 PKGNAME=	${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	finance
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
