--- a/textproc/hs-commonmark-extensions/Makefile
+++ b/textproc/hs-commonmark-extensions/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:32:41 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/09 23:15:14 wiz Exp $
 
 DISTNAME=	commonmark-extensions-0.2.5.4
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	textproc
 
 MAINTAINER=	pho@cielonegro.org
