--- a/textproc/hs-djot/Makefile
+++ b/textproc/hs-djot/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2024/05/09 01:32:41 pho Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/09 23:15:15 wiz Exp $
 
 DISTNAME=	djot-0.1.1.3
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
