--- a/textproc/hs-doclayout/Makefile
+++ b/textproc/hs-doclayout/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/05/09 01:32:41 pho Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/09 23:15:15 wiz Exp $
 
 DISTNAME=	doclayout-0.4.0.1
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	textproc
 
 MAINTAINER=	pho@cielonegro.org
