--- a/textproc/groff/Makefile
+++ b/textproc/groff/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.99 2023/08/14 05:25:22 wiz Exp $
+# $NetBSD: Makefile,v 1.100 2025/01/10 03:21:20 ktnb Exp $
 
-DISTNAME=	groff-1.22.4
-PKGREVISION=	7
+DISTNAME=	groff-1.23.0
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GNU:=groff/}
 
