--- a/time/py-aniso8601/Makefile
+++ b/time/py-aniso8601/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2023/03/29 09:34:14 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/10 08:49:06 adam Exp $
 
-DISTNAME=	aniso8601-9.0.1
+DISTNAME=	aniso8601-10.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	time python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/aniso8601/}
 
@@ -11,13 +10,9 @@ HOMEPAGE=	https://bitbucket.org/nielsenb/aniso8601
 COMMENT=	Library for parsing ISO 8601 strings
 LICENSE=	modified-bsd
 
-.include "../../lang/python/pyversion.mk"
-
-.if ${PYTHON_VERSION} == 207
-TEST_DEPENDS+=	${PYPKGPREFIX}-mock>=2.0.0:../../devel/py-mock
-.endif
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
