--- a/time/py-relativetimebuilder/Makefile
+++ b/time/py-relativetimebuilder/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2024/11/11 07:29:13 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/10 08:51:07 adam Exp $
 
-DISTNAME=	relativetimebuilder-3.0.0
+DISTNAME=	relativetimebuilder-3.0.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	time python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/relativetimebuilder/}
 
@@ -14,11 +13,8 @@ LICENSE=	modified-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-aniso8601>=9.0.0:../../time/py-aniso8601
 DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.7.3:../../time/py-dateutil
-TEST_DEPENDS+=	${PYPKGPREFIX}-mock>=2.0.0:../../devel/py-mock
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
