--- a/textproc/py-mistune/Makefile
+++ b/textproc/py-mistune/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2024/11/11 07:29:06 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/10 08:56:11 adam Exp $
 
-DISTNAME=	mistune-3.0.2
+DISTNAME=	mistune-3.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/mistune/}
 
@@ -15,10 +14,10 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} ${PYTHONBIN} -m unittest discover -v
+.include "../../lang/python/pyversion.mk"
+.if ${PYTHON_VERSION} < 311
+DEPENDS+=	${PYPKGPREFIX}-typing-extensions-[0-9]*:../../devel/py-typing-extensions
+.endif
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
