--- a/textproc/py-pygments/Makefile
+++ b/textproc/py-pygments/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.52 2024/05/05 10:34:32 wiz Exp $
+# $NetBSD: Makefile,v 1.53 2025/01/10 08:58:30 adam Exp $
 
-DISTNAME=	pygments-2.18.0
+DISTNAME=	pygments-2.19.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pygments/}
@@ -15,8 +15,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-lxml-[0-9]*:../../textproc/py-lxml
 TEST_DEPENDS+=	${PYPKGPREFIX}-wcag-contrast-ratio-[0-9]*:../../graphics/py-wcag-contrast-ratio
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
