--- a/devel/hs-pandoc-lua-marshal/Makefile
+++ b/devel/hs-pandoc-lua-marshal/Makefile
@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.11 2024/05/09 01:32:06 pho Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/10 10:12:25 wiz Exp $
 
-DISTNAME=	pandoc-lua-marshal-0.2.6
-PKGREVISION=	1
+DISTNAME=	pandoc-lua-marshal-0.3.0
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Use pandoc types in Lua
 LICENSE=	mit
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	hslua-list
 
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../lang/hs-hslua/buildlink3.mk"
@@ -15,5 +17,6 @@ LICENSE=	mit
 .include "../../lang/hs-lua/buildlink3.mk"
 .include "../../textproc/hs-pandoc-types/buildlink3.mk"
 .include "../../devel/hs-safe/buildlink3.mk"
+.include "../../lang/hs-hslua-list/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
