--- a/lang/gcc10/patches/patch-gcc_Makefile.in
+++ b/lang/gcc10/patches/patch-gcc_Makefile.in
@@ -1,7 +1,8 @@
-$NetBSD: patch-gcc_Makefile.in,v 1.3 2025/01/07 19:54:31 riastradh Exp $
+$NetBSD: patch-gcc_Makefile.in,v 1.4 2025/01/10 11:57:07 riastradh Exp $
 
-Add gcc libdir to programs' rpath so that _this gcc's_ support libraries
-are found.
+Ensure libgcc from this GCC is found before others.  Note that there must
+not be a whitespace between $(LINKER_RPATH_FLAG) and the path.  Otherwise
+the flag may be misinterpreted by the linker (e.g. Apple ld).
 
 Add a hack to increase the stack for genautomata on QNX.
 
@@ -11,7 +12,7 @@ Add a hack to increase the stack for genautomata on QNX.
  # Language-independent files.
  
  DRIVER_DEFINES = \
-+  -DLINK_LIBGCC_SPEC="\"%D $(LINKER_RPATH_FLAG) $(prefix)/@GCC_TARGET_MACHINE@/lib/%M $(LINKER_RPATH_FLAG) $(libdir)/%M \"" \
++  -DLINK_LIBGCC_SPEC="\"%D $(LINKER_RPATH_FLAG)$(prefix)/@GCC_TARGET_MACHINE@/lib/%M $(LINKER_RPATH_FLAG)$(libdir)/%M \"" \
    -DSTANDARD_STARTFILE_PREFIX=\"$(unlibsubdir)/\" \
    -DSTANDARD_EXEC_PREFIX=\"$(libdir)/gcc/\" \
    -DSTANDARD_LIBEXEC_PREFIX=\"$(libexecdir)/gcc/\" \
