--- a/security/R-askpass/Makefile
+++ b/security/R-askpass/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2019/09/26 00:49:07 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/11 11:39:34 mef Exp $
 
 R_PKGNAME=	askpass
-R_PKGVER=	1.1
+R_PKGVER=	1.2.1
 CATEGORIES=	security
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,6 +9,14 @@ COMMENT=	Safe password entry for R, Git, and SSH
 LICENSE=	mit
 
 DEPENDS+=	R-sys>=2.1:../../sysutils/R-sys
+
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
