--- a/security/R-credentials/Makefile
+++ b/security/R-credentials/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2022/05/11 14:22:23 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/11 11:47:54 mef Exp $
 
 R_PKGNAME=	credentials
-R_PKGVER=	1.3.2
+R_PKGVER=	2.0.2
 CATEGORIES=	security
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -15,6 +15,13 @@ DEPENDS+=	R-jsonlite>=1.7.1:../../textproc/R-jsonlite
 DEPENDS+=	R-curl>=4.3:../../www/R-curl
 
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
